force-app/main/default/objects/TriggerFrameworkAlert__e/TriggerFrameworkAlert__e.object-meta.xml
<CustomObject>
    <label>Trigger Framework Alert</label>
    <pluralLabel>Trigger Framework Alerts</pluralLabel>
</CustomObject>