force-app/main/default/objects/TriggerFrameworkAlert__e/fields/CircuitBreakerType__c.field-meta.xml
<CustomField>
    <fullName>CircuitBreakerType__c</fullName>
    <label>Circuit Breaker Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>