force-app/main/default/objects/TriggerFrameworkAlert__e/fields/HandlerName__c.field-meta.xml
<CustomField>
    <fullName>HandlerName__c</fullName>
    <label>Handler Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>